Fixing how it looks on mobile device.

--- a/dashboard.css
+++ b/dashboard.css
@@ -13,6 +13,12 @@
   border-radius: 8px;
 }
 
+.goal-form{
+  display: flex;
+  flex-direction: column;
+  gap: 0,75em
+}
+
 .goal-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
